[workspace]
resolver = "2"
members = [
    "necromancer",
    "necromancer_protocol",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Michael Farrell <micolous+git@gmail.com>"]
repository = "https://github.com/micolous/necromancer"
keywords = ["atem", "blackmagic"]

[workspace.dependencies]
binrw = "0.15.0"
chrono = "0.4.42"
clap = "4.5.48"
fixed = "1.29.0"
hex = "0.4.3"
modular-bitfield = "0.12.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
palette = "0.7.6"
serde = "1.0.226"
thiserror = "2.0.16"
tracing = "0.1.41"

[workspace.dependencies.necromancer_protocol]
path = "./necromancer_protocol"
version = "=0.0.0"

[workspace.dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]
