[workspace]
resolver = "2"
members = [
    "necromancer",
    "necromancer_protocol",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Michael Farrell <micolous+git@gmail.com>"]
repository = "https://github.com/micolous/necromancer"
keywords = ["atem", "blackmagic"]

[workspace.dependencies]
binrw = "0.15.0"
bitflags = "2.4.0"
chrono = "0.4.42"
fixed = "1.29.0"
flate2 = "1.1.2"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
md5 = "0.8.0"
modular-bitfield = "0.12.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
palette = "0.7.6"
rand = "0.9.2"
thiserror = "2.0.16"
tracing = "0.1.41"

[workspace.dependencies.clap]
version = "4.5.48"
features = ["derive"]

[workspace.dependencies.concread]
version = "0.5.7"
features = ["asynch"]

[workspace.dependencies.necromancer_protocol]
path = "./necromancer_protocol"
version = "=0.0.0"

[workspace.dependencies.serde]
version = "1.0.226"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.47.1"
features = ["macros", "net", "rt-multi-thread"]

[workspace.dependencies.tokio-stream]
version = "0.1.17"
features = ["sync"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]
