[package]
name = "necromancer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reserving a package name for a pure-Rust re-implementation of the Blackmagic ATEM control protocol"
repository.workspace = true
keywords.workspace = true

[dependencies]
necromancer_protocol.workspace = true
