[package]
name = "necromancer_protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Low level protocol primitives for Blackmagic ATEM control protocol"
repository.workspace = true
keywords.workspace = true

[features]
default = ["palette"]
serde = ["dep:serde"]
clap = ["dep:clap"]
palette = ["dep:palette"]

[dependencies]
binrw.workspace = true
chrono.workspace = true
clap = { workspace = true, optional = true }
fixed.workspace = true
hex.workspace = true
modular-bitfield.workspace = true
num-derive.workspace = true
num-traits.workspace = true
palette = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
palette.workspace = true
